--- a/inventory/templates/product-list.component.html
+++ b/inventory/templates/product-list.component.html
@@ -16,7 +16,7 @@
 			<td>{{product.price}}</td>
 			<td>{{product.stock}}</td>
 			<td>{{product.description}}</td>
-			<td><product-details [product]="product"></product-details></td>
+			<td><product-details [pr]="product"></product-details></td>
 		</tr>
 	</tbody>
 </table>
