routing, update view

--- a/src/inventory/app.component.html
+++ b/src/inventory/app.component.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 	<h1>{{title}}</h1>
-	<product-create></product-create>
+  	<product-create></product-create>
 	<hr/>
-	<product-list></product-list>
+	<router-outlet></router-outlet>
 </div>
