--- a/src/inventory/products/product-list/product-list.component.html
+++ b/src/inventory/products/product-list/product-list.component.html
@@ -11,7 +11,7 @@
 
 	<tbody>
 		<tr *ngFor="let product of products">
-			<td>{{product.id}}</td>
+			<td>{{product.code}}</td>
 			<td>{{product.name}}</td>
 			<td>{{product.price}}</td>
 			<td>{{product.stock}}</td>
