--- a/src/inventory/products/product-form/product-form.component.html
+++ b/src/inventory/products/product-form/product-form.component.html
@@ -12,16 +12,15 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Product Form</h4>
       </div>
-      <div class="modal-body">
-
-          <form [ngFormModel]="productForm"  
-                (ngSubmit)="saveProduct()"  
-                class="form-horizontal">
-
-                <div *ngFor="let field of formFields; let i = index"
+      
+      <form [ngFormModel]="productForm"
+            class="form-horizontal">
+          
+          <div class="modal-body">
+              <div *ngFor="let field of formFields; let i = index"
                   class='form-group'
                   [class.has_error]="!productForm.find(field).valid && productForm.find(field).touched"
-                >
+              >
                   
                   <label attr.for="{{field}}" class="col-sm-2 control-label">{{field|uppercase}}</label>
                   <div class="col-xs-6">
@@ -32,14 +31,13 @@
                         [ngFormControl]="productForm.controls[field]">
                   </div>
                   <div *ngIf="formError() != null && formError()[1] == field">{{formError()[0][field]}}</div>
-                </div>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Save changes</button>
-          </form>
-      </div>
-      <div class="modal-footer">
-
-      </div>
+              </div>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" (click)='saveProduct()' data-dismiss="modal" class="btn btn-primary">Save</button>
+          </div>
+      </form>
     </div>
   </div>
 </div>
